--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="src/objects/MonsterBossSpectre.js"></script>
     <script src="src/objects/Bird.js"></script>
     <script src="src/objects/ElementVase.js"></script>
+    <script src="src/objects/ElementSolFragile.js"></script>
     <script src="src/scenes/structure/Tableau.js"></script>
     <script src="src/scenes/structure/Ui.js"></script>
 
