--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <script src="src/objects/Bird.js"></script>
     <script src="src/objects/ElementVase.js"></script>
     <script src="src/objects/ElementSolFragile.js"></script>
+    <script src="src/objects/ElementSolFragilePierre.js"></script>
+    <script src="src/objects/ElementRocheQuiRoule.js"></script>
     <script src="src/scenes/structure/Tableau.js"></script>
     <script src="src/scenes/structure/Ui.js"></script>
 
