--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="src/objects/ObjetEnnemi.js"></script>
     <script src="src/objects/MonsterFly.js"></script>
     <script src="src/objects/MonsterZombie.js"></script>
+    <script src="src/objects/MonsterSkeleton.js"></script>
     <script src="src/objects/MonsterBossSpectre.js"></script>
     <script src="src/objects/Bird.js"></script>
     <script src="src/objects/ElementVase.js"></script>
