--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
     <script src="src/objects/MonsterSkeleton.js"></script>
     <script src="src/objects/MonsterBossSpectre.js"></script>
     <script src="src/objects/Bird.js"></script>
-    <script src="src/objects/ElementVase.js"></script>
+    <script src="src/objects/ElementProjectils.js"></script>
+    <script src="src/objects/ElementRocheQuiRoule.js"></script>
     <script src="src/objects/ElementSolFragile.js"></script>
     <script src="src/objects/ElementSolFragilePierre.js"></script>
-    <script src="src/objects/ElementRocheQuiRoule.js"></script>
+    <script src="src/objects/ElementVase.js"></script>
+
     <script src="src/scenes/structure/Tableau.js"></script>
     <script src="src/scenes/structure/Ui.js"></script>
 
-
+    <script src="src/scenes/Welcome.js"></script>
+    <script src="src/scenes/ControlsPanel.js"></script>
     <script src="src/scenes/Niveau1.js"></script>
-    <script src="src/scenes/TableauStart.js"></script>
     
     <script src="main.js"></script>
 
