--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
     <script src="./vendor/phaser-3.50.0/dist/phaser.min.js"></script>
+    <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="assets/elements/PlatformerLogoRemastered_400x400.png">
     <style type="text/css">
         body {
             margin: 0;
