--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="src/objects/MonsterSkeleton.js"></script>
     <script src="src/objects/MonsterBossSpectre.js"></script>
     <script src="src/objects/Bird.js"></script>
+    <script src="src/objects/ElementBonus.js"></script>
     <script src="src/objects/ElementProjectils.js"></script>
     <script src="src/objects/ElementRocheQuiRoule.js"></script>
     <script src="src/objects/ElementSolFragile.js"></script>
