--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="src/objects/ElementBonus.js"></script>
     <script src="src/objects/ElementProjectils.js"></script>
     <script src="src/objects/ElementRocheQuiRoule.js"></script>
+    <script src="src/objects/ElementRocheQuiRoule2.js"></script>
     <script src="src/objects/ElementSolFragile.js"></script>
     <script src="src/objects/ElementSolFragilePierre.js"></script>
     <script src="src/objects/ElementBoxeTexte.js"></script>
