--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>The Dead King's Rising</title>
-    <link rel="preload" as="font" href="assets/fonts/SCRIPTBL.TTF" type="font/ttf" />
+    <link rel="preload" as="font" href="assets/fonts/SCRIPTBL.ttf" type="font/ttf" />
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
