--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="src/objects/ElementSolFragilePierre.js"></script>
     <script src="src/objects/ElementBoxeTexte.js"></script>
     <script src="src/objects/ElementVase.js"></script>
+    <script src="src/objects/CollectiblePower.js"></script>
 
     <script src="src/scenes/structure/Tableau.js"></script>
     <script src="src/scenes/structure/Ui.js"></script>
