--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="src/objects/MonsterZombie.js"></script>
     <script src="src/objects/MonsterSkeleton.js"></script>
     <script src="src/objects/MonsterBossSpectre.js"></script>
+    <script src="src/objects/MonsterVase.js"></script>
     <script src="src/objects/Bird.js"></script>
     <script src="src/objects/ElementBloquerFly.js"></script>
     <script src="src/objects/ElementBonus.js"></script>
