--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <script src="src/scenes/Welcome.js"></script>
     <script src="src/scenes/ControlsPanel.js"></script>
+    <script src="src/scenes/Credits.js"></script>
     <script src="src/scenes/Niveau1.js"></script>
     
     <script src="main.js"></script>
